--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3 flex-last align-items-center">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
