--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="container">
         <div class="row row-content align-items-center">
-            <div class="col-sm-4 push-sm-8 col-md-3 flex-last">
+            <div class="col-sm-4 col-md-3 flex-last">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col-sm col-md flex-first">
