--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-8">
+                <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col col-sm align-self-center">
+                <div class="col col-sm-3 align-self-center">
                     <img src="img/logo.png" alt="Logo" class="img-fluid">
+                </div>
+                <div class="col col-sm-3 align-self-center">
+                    <button type="submit" class="btn btn-warning">Reserve Table</button>
                 </div>
             </div>
         </div>
@@ -65,12 +68,17 @@
 
 
         <div class="row row-content align-items-center">
-            <div class="col-sm-4 col-md-3">
+            <div class="col-sm-4 col-md-3 flex-first">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            <div class="col-sm col-md flex-first">
+                <div class="media">
+                    <div class="media-body">
+                        <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img src="img/buffet.png" alt="buffet" class="d-flex ml-3 img-thumbnail align-self-center">
+                </div>
             </div>
         </div>
 
@@ -89,7 +97,75 @@
                 </div>
             </div>
         </div>
+
+        <div class="row row-content align-items-center">
+            <div class="col-12 col-sm-8 reserve">
+                <h3 class="col-12 col-sm-8 bg-warning text-white">Reserve a Table</h3>
+                <form action="">
+                    <div class="form-group row">
+                        <label for="guest" class="col-sm-2 col-form-label">Number of Guests</label>
+                        <div class="form-check form-check-inline">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="radio" name="one" id="guest" value="one" checked>1</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="radio" name="two" id="guest" value="two" checked>2</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="radio" name="three" id="guest" value="three" checked>3</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="radio" name="four" id="guest" value="four" checked>4</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="radio" name="five" id="guest" value="five" checked>5</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="radio" name="six" id="guest" value="six" checked>6</label>
+                        </div>
+                    </div>
+
+                    <div class="container">
+                        <div class="row">
+                            <label class="col-sm-2 form-group-inline" for="date-input">Date &amp; Time</label>
+                            <div class='col-sm-3'>
+                                <div class="form-group form-group-inline">
+                                    <div class='input-group date' id='datepicker1'>
+                                        <span class="input-group-addon">
+                                            <span class="fa fa-calendar"></span>
+                                        </span>
+                                        <input type='text' class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class='col-sm-3'>
+                                <div class="form-group form-group-inline">
+                                    <div class='input-group time' id='timepicker1'>
+                                        <span class="input-group-addon">
+                                            <span class="fa fa-clock-o"></span>
+                                        </span>
+                                        <input type='text' class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <div class="offset-md-2 col-md-8">
+                            <button type="submit" class="btn btn-primary">Reserve</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
+
 
     <footer class="footer">
         <div class="container">
